Added function to get historical weather data for air quality backfill

--- a/notebooks/airquality/1_air_quality_feature_backfill.ipynb
+++ b/notebooks/airquality/1_air_quality_feature_backfill.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9145f0b7-d961-41f7-aebe-741dbf00784c",
    "metadata": {},
    "outputs": [
@@ -377,9 +377,8 @@
     "# If this API call fails (it fails in a github action), then set longitude and latitude explicitly - comment out next line\n",
     "#latitude, longitude = util.get_city_coordinates(city)\n",
     "# Uncomment this if API call to get longitude and latitude\n",
-    "#latitude = \"59.314017450051836\"\n",
-    "#longitude = \"18.075630285191593\"\n",
-    "\n",
+    "#latitude = \"55.675713\"\n",
+    "#longitude = \"12.567969\"\n",
     "\n",
     "# print(f\"Found AQICN_API_KEY: {AQICN_API_KEY}\")\n",
     "print(\"Found AQICN_API_KEY\")\n",
